--- a/src/main/resources/templates/artist/myArtworks.html
+++ b/src/main/resources/templates/artist/myArtworks.html
@@ -111,40 +111,31 @@
         <div class="modal-content">
             <form action="#" th:action="@{/create_artwork}" th:object="${artworkDTO}" enctype="multipart/form-data" method="post">
                 <div class="modal-header">
-<!--                    <h5 class="modal-title" id="addArtworkModalLabel">Modal title</h5>-->
                     <input id="addArtworkModalLabel" type="text" th:field="*{artworkName}" class="fadeIn second" name="artworkName" placeholder="Artwork name" required/>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
                     <input type="text" th:field="*{artworkPrice}" class="fadeIn second" name="artworkPrice" placeholder="Price" required/>
                     <input type="text" th:field="*{artworkDescription}" class="fadeIn second" name="artworkDescription" placeholder="Description"/>
-<!--                    <input type="file" th:field="*{primaryImage}" class="fadeIn second" name="artworkImages" accept=".jpg, .png, .jpeg">-->
-<!--                    <input type="file" th:field="*{secondImage}" class="fadeIn second" name="secondImage" accept=".jpg, .png, .jpeg">-->
-<!--                    <input type="file" th:field="*{thirdImage}" class="fadeIn second" name="thirdImage" accept=".jpg, .png, .jpeg">-->
-<!--                    <input type="file" th:field="*{images}" class="fadeIn second" enctype="multipart/form-data" name="images" accept=".jpg, .png, .jpeg" multiple>-->
-<!--                    <input type="file" class="form-control" id="files"-->
-<!--                           placeholder="Upload Multiple Files" name="files" multiple/>-->
-                    <input type="file" id="firstImageInput" th:field="*{firstImage}"
+                    <input type="file" id="firstImageInput" th:field="*{firstImage.multipartFile}"
                            onchange="reload_image('firstImage', this)" class="fadeIn second"
                            enctype="multipart/form-data" accept=".jpg, .png, .jpeg">
-                    <!--                    first image-->
-                    <!--                    <img th:if="*{oldImageUrls.size()>0}" th:src="*{oldImageUrls[0]}">-->
-                    <!--                    <img th:if="*{oldImageUrls.size()==0}">-->
-                    <!--                    <img th:if="*{oldImageUrls.size()>0 || firstImage ne null}" th:src="*{oldImageUrls[0]}"-->
+                    <input type="text" th:field="*{firstImage.position}" th:value="1" hidden>
                     <img src ="static/images/upload_image.jpg" id="firstImage">
-                    <input type="file" id="secondImageInput" th:field="*{secondImage}"
+                    <input type="file" id="secondImageInput" th:field="*{secondImage.multipartFile}"
                            onchange="reload_image('secondImage', this)" class="fadeIn second"
                            enctype="multipart/form-data" accept=".jpg, .png, .jpeg">
+                    <input type="text" th:field="*{secondImage.position}" th:value="2" hidden>
                     <img src ="static/images/upload_image.jpg" id="secondImage">
-                    <!--                    <img th:if="*{oldImageUrls.size()>1 || secondImage ne null}" src="" th:src="*{oldImageUrls.size()>1? oldImageUrls[1]}"-->
-                    <input type="file" id="thirdImageInput" th:field="*{thirdImage}"
+                    <input type="file" id="thirdImageInput" th:field="*{thirdImage.multipartFile}"
                            onchange="reload_image('thirdImage', this)" class="fadeIn second"
                            enctype="multipart/form-data" accept=".jpg, .png, .jpeg">
+                    <input type="text" th:field="*{thirdImage.position}" th:value="3" hidden>
                     <img src ="static/images/upload_image.jpg" id="thirdImage">
-                    <!--                    <img th:if="*{oldImageUrls.size()>2 || thirdImage ne null}" th:src="*{oldImageUrls[2]}"-->
-                    <input type="file" id="forthImageInput" th:field="*{forthImage}"
+                    <input type="file" id="forthImageInput" th:field="*{forthImage.multipartFile}"
                            onchange="reload_image('forthImage', this)"
                            class="fadeIn second" enctype="multipart/form-data" accept=".jpg, .png, .jpeg">
+                    <input type="text" th:field="*{forthImage.position}" th:value="4" hidden>
                     <img src ="static/images/upload_image.jpg" id="forthImage">
                 </div>
                 <div class="modal-footer">
@@ -152,16 +143,6 @@
                     <button type="submit" class="btn btn-primary">Add</button>
                 </div>
             </form>
-<!--            <form method="POST" enctype="multipart/form-data" id="fileUploadForm" action="/create_artwork/test">-->
-<!--                <div class="form-group">-->
-<!--                    <label class="control-label" for="files">Upload Multiple Files:</label>-->
-<!--                    <input type="file" class="form-control"-->
-<!--                           placeholder="Upload Multiple Files" name="files" multiple/>-->
-<!--                </div>-->
-<!--                <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />-->
-<!--                <button type="submit" class="btn btn-default" id="btnSubmit">Upload</button>-->
-<!--                <a href="/files" class="btn btn-default" role="button">Files</a>-->
-<!--            </form>-->
         </div>
     </div>
 </div>
