--- a/src/main/resources/templates/artworks/artworkInformation.html
+++ b/src/main/resources/templates/artworks/artworkInformation.html
@@ -19,7 +19,8 @@
 </head>
 <body>
 <!-- NAVBAR -->
-+<div th:insert="~{nav :: copy}"></div>
++
+<div th:insert="~{nav :: copy}"></div>
 <!-- NAVBAR -->
 <h2><span th:text="${artwork.artworkName}">Name</span></h2>
 <div class="img">
@@ -39,7 +40,8 @@
 </button>
 
 <!-- Edit Artwork Modal -->
-<div th:if="${editArtworkDTO!=null}" class="modal fade" id="editArtworkModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div th:if="${editArtworkDTO!=null}" class="modal fade" id="editArtworkModal" tabindex="-1"
+     aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
             <form action="#" th:action="@{/edit_artwork}" th:object="${editArtworkDTO}"
@@ -55,29 +57,26 @@
                            placeholder="Price" required/>
                     <input type="text" th:field="*{artworkDescription}" class="fadeIn second" name="artworkDescription"
                            placeholder="Description"/>
-                    <input type="file" id="firstImageInput" th:field="*{firstImage.multipartFile}"
+
+                    <input type="file" id="firstImageInput" th:field="*{images[0].multipartFile}"
                            onchange="reload_image('firstImage', this)" class="fadeIn second"
                            enctype="multipart/form-data" accept=".jpg, .png, .jpeg">
-                    <input type="text" th:field="*{firstImage.position}" th:value="1" hidden>
-                    <img th:src="*{'data:image/'+ firstImage.getImageContentType() +';base64, ' + firstImage.getImageBase64()}"
+                    <img th:src="*{'data:image/'+ images[0].getImageContentType() +';base64, ' + images[0].getImageBase64()}"
                          id="firstImage">
-                    <input type="file" id="secondImageInput" th:field="*{secondImage.multipartFile}"
+                    <input type="file" id="secondImageInput" th:field="*{images[1].multipartFile}"
                            onchange="reload_image('secondImage', this)" class="fadeIn second"
                            enctype="multipart/form-data" accept=".jpg, .png, .jpeg">
-                    <input type="text" th:field="*{secondImage.position}" th:value="2" hidden>
-                    <img th:src="*{'data:image/'+ secondImage.getImageContentType()+';base64, ' + secondImage.getImageBase64()}"
+                    <img th:src="*{'data:image/'+ images[1].getImageContentType() +';base64, ' + images[1].getImageBase64()}"
                          id="secondImage">
-                    <input type="file" id="thirdImageInput" th:field="*{thirdImage.multipartFile}"
+                    <input type="file" id="thirdImageInput" th:field="*{images[2].multipartFile}"
                            onchange="reload_image('thirdImage', this)" class="fadeIn second"
                            enctype="multipart/form-data" accept=".jpg, .png, .jpeg">
-                    <input type="text" th:field="*{thirdImage.position}" th:value="3" hidden>
-                    <img th:src="*{'data:image/'+ thirdImage.getImageContentType()+';base64, ' + thirdImage.getImageBase64()}"
+                    <img th:src="*{'data:image/'+ images[2].getImageContentType() +';base64, ' + images[2].getImageBase64()}"
                          id="thirdImage">
-                    <input type="file" id="forthImageInput" th:field="*{forthImage.multipartFile}"
+                    <input type="file" id="forthImageInput" th:field="*{images[3].multipartFile}"
                            onchange="reload_image('forthImage', this)" class="fadeIn second"
                            enctype="multipart/form-data" accept=".jpg, .png, .jpeg">
-                    <input type="text" th:field="*{forthImage.position}" th:value="4" hidden>
-                    <img th:src="*{'data:image/'+ forthImage.getImageContentType()+';base64, ' + forthImage.getImageBase64()}"
+                    <img th:src="*{'data:image/'+ images[3].getImageContentType() +';base64, ' + images[3].getImageBase64()}"
                          id="forthImage">
                 </div>
                 <div class="modal-footer">
@@ -95,7 +94,8 @@
     </div>
 </div>
 +<!-- footer-->
-+<div th:insert="~{footer :: copy}"></div>
++
+<div th:insert="~{footer :: copy}"></div>
 +<!-- footer-->
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
