--- a/src/main/resources/templates/artist/myArtworks.html
+++ b/src/main/resources/templates/artist/myArtworks.html
@@ -62,19 +62,27 @@
                     <input type="file" id="firstImageInput" th:field="*{images[0].multipartFile}"
                            onchange="reload_image('firstImage', this)" class="fadeIn second"
                            enctype="multipart/form-data" accept=".jpg, .png, .jpeg">
-                    <img src="static/images/upload_image.jpg" id="firstImage">
+                    <img src="/static/images/upload_image.jpg" id="firstImage"
+                         th:height="${@environment.getProperty('image.medium.height')}"
+                         th:width="${@environment.getProperty('image.medium.width')}">
                     <input type="file" id="secondImageInput" th:field="*{images[1].multipartFile}"
                            onchange="reload_image('secondImage', this)" class="fadeIn second"
                            enctype="multipart/form-data" accept=".jpg, .png, .jpeg">
-                    <img src="static/images/upload_image.jpg" id="secondImage">
+                    <img src="/static/images/upload_image.jpg" id="secondImage"
+                         th:height="${@environment.getProperty('image.medium.height')}"
+                         th:width="${@environment.getProperty('image.medium.width')}">
                     <input type="file" id="thirdImageInput" th:field="*{images[2].multipartFile}"
                            onchange="reload_image('thirdImage', this)" class="fadeIn second"
                            enctype="multipart/form-data" accept=".jpg, .png, .jpeg">
-                    <img src="static/images/upload_image.jpg" id="thirdImage">
+                    <img src="/static/images/upload_image.jpg" id="thirdImage"
+                         th:height="${@environment.getProperty('image.medium.height')}"
+                         th:width="${@environment.getProperty('image.medium.width')}">
                     <input type="file" id="forthImageInput" th:field="*{images[3].multipartFile}"
                            onchange="reload_image('forthImage', this)"
                            class="fadeIn second" enctype="multipart/form-data" accept=".jpg, .png, .jpeg">
-                    <img src="static/images/upload_image.jpg" id="forthImage">
+                    <img src="/static/images/upload_image.jpg" id="forthImage"
+                         th:height="${@environment.getProperty('image.medium.height')}"
+                         th:width="${@environment.getProperty('image.medium.width')}">
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
