--- a/src/main/resources/templates/nav.html
+++ b/src/main/resources/templates/nav.html
@@ -16,7 +16,7 @@
       <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
 
         <li class="nav-item">
-          <a class="nav-link" th:href="@{/artworks}"><img th:src="@{/pictures/SAOFLogo.svg}" alt="Logo" width="40"></a>
+          <a class="nav-link" th:href="@{/artworks}"><img th:src="@{/pictures/SAOFLogo.svg}" alt="Logo" width="40" title="Go to Home"></a>
         </li>
         <li class="nav-item">
           <a class="nav-link" th:href="@{/contact}">About</a>
