--- a/src/main/resources/static/css/mainpage.css
+++ b/src/main/resources/static/css/mainpage.css
@@ -1,3 +1,11 @@
+a{
+    color: grey;
+}
+
+a:hover{
+    color: #DB3C3C;
+}
+
 .social-part .fa{
     padding-right:20px;
 }
@@ -31,14 +39,27 @@ ul li a{
 /*footer*/
 
 .footer{
-    padding: 5rem;
     position: fixed;
     bottom: 0;
     width: 100%;
 /* Height of the footer*/
-    height: 5rem;
+    height: 60px;
     background: black;
 }
+
+#footercontent{
+    padding-top: 10px;
+    text-align: center;
+    color: grey;
+    vertical-align: middle;
+}
+
+#footerlogotext{
+    padding-top: 10px;
+    color: grey;
+    vertical-align: middle;
+}
+
 /*footer*/
 
 
@@ -105,3 +126,4 @@ input:checked + .slider:before {
 .slider.round:before {
     border-radius: 50%;
 }
+
